--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
+    "reactstrap": "^9.2.3",
     "styled-components": "^6.0.3",
     "yup": "^1.2.0"
   },
